update for james to add basic authentic key
